--- a/app/goods/templates/goods/catalog.html
+++ b/app/goods/templates/goods/catalog.html
@@ -2,6 +2,11 @@
 {% load static %}
 {% load goods_tags %}
 
+{% block modal_cart %}
+{% include "includes/cart_button.html" %}
+{% endblock  %}
+
+
 {% block content %}
 <div class="row">
     <!-- Форма фильтров -->
@@ -46,11 +51,11 @@
             <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>
         </form>
     </div>
-    <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">
+
     {% if request.GET.q %}
     <h3 class="mt-4">Результаты поиска по запросу {{ request.GET.q }}</h3>
     {% if not goods %}
-
+        <link rel="stylesheet" href="{% static "deps/css/my_footer_css.css" %}">
         <h2 class="mt-4">По запросу ничего не найдено</h2>
     {% endif %}
     {% endif %}
@@ -95,7 +100,7 @@
                             <p><strong>{{ product.price }} $</strong></p>
                         {% endif %}
 
-                        <a href="#" class="btn add-to-cart">
+                        <a href="{% url "cart:cart_add" product.slug %}" class="btn add-to-cart">
                             <img class="mx-1" src="{% static "deps/icons/cart-plus.svg" %}" alt="Catalog Icon"
                                 width="32" height="32">
                         </a>
